# kung-fu-chess

./: .coverage  .gitignore  PROJECT_GUIDE.md  README.md  board.py  config.py  conftest.py  constants.py  engine.py  main.py  movement.py  parser.py  pyproject.toml  router.py  validator.py
chess_io/: board_parser.py  board_printer.py
client/: README.md  dialogs.py  main.py  ui_config.py
client/graphics/: hud_renderer.py  piece_renderer.py  protocols.py
client/network/: network_game_facade.py  ws_client.py
client/screens/: game_screen.py  home_screen.py  login_screen.py  screen_manager.py
client/state/: game_facade.py  motion_tracker.py  observer.py
client/ui_components/: moves_log_panel.py  sound_player.py
client/user_input/: mouse_controller.py
engine/: game_engine.py
input/: board_mapper.py  controller.py
model/: board.py  game_state.py
realtime/: motion.py  real_time_arbiter.py
rules/: piece_rules.py  rule_engine.py
server/: .coveragerc  README.md  config.py  protocol.py
server/engine/: game_engine.py  motion.py  observer.py  real_time_arbiter.py
server/gateway/: connection.py  ws_server.py
server/handlers/: auth_handler.py  common.py  gameplay_handler.py  matchmaking_handler.py  rooms_handler.py
submit/: board.py  game_engine.py  main.py  motion.py  piece_rules.py  real_time_arbiter.py
tests/: test_board.py  test_engine.py  test_integration.py  test_model_board.py  test_movement.py  test_parser_router_validator.py  test_piece_rules.py  test_real_time_arbiter.py
ui/: README.md  main.py  server_bridge.py  ui_config.py
(+129 files in other folders)
